DBZ-2002 Rework to Debezium standards